<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"
    tools:context=".AddDoctor">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="756dp"
        android:layout_height="241dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/hotelpic"
        tools:layout_editor_absoluteY="-101dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="408dp"
        android:layout_height="39dp"
        android:background="@android:color/background_light"
        android:fontFamily="sans-serif-black"
        android:text="@string/doctor"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="139dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="202dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="204dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="517dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="105dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:text="@string/doc_email"
        android:textAlignment="gravity"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="527dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="105dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:text="@string/doc_phone"
        android:textAlignment="gravity"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="457dp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="202dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="447dp" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="208dp"
        android:layout_height="49dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="362dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="105dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:text="@string/doc_address"
        android:textAlignment="gravity"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="377dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="286dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="105dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:text="@string/doc_name"
        android:textAlignment="gravity"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="212dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginStart="28dp"
        android:text="@string/doc_speciality"
        android:textAlignment="gravity"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="296dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="ADD"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="606dp" />
</androidx.constraintlayout.widget.ConstraintLayout>