<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yasoja_food_background"
    tools:context=".DeleteFood">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/FoodDelete_recycler_view"
        android:layout_width="255dp"
        android:layout_height="151dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="#DFD25A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_deleteText"></androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="350dp"
        android:layout_height="41dp"
        android:background="@drawable/yasoja_text_custom2"
        android:fontFamily="sans-serif-black"
        android:text="@string/room_service"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="357dp"
        android:layout_height="87dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hotelpic3" />

    <EditText
        android:id="@+id/txt_deleteText"
        android:layout_width="147dp"
        android:layout_height="39dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/yasoja_edit_texts"
        android:ems="10"
        android:hint="@string/order_id"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_DeleteDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/yasoja_custom_button"
        android:onClick="onClick"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FoodDelete_recycler_view" />

    <Button
        android:id="@+id/btn_DeleteSearch"
        android:layout_width="77dp"
        android:layout_height="42dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/yasoja_text_custom"
        android:onClick="onClick"
        android:text="@string/food_search"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txt_deleteText"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>